# lincity

./: CHANGES  CMakeLists.txt  COPYRIGHT  README.md  TODO  cliglobs.c  cliglobs.h  common.h  config.h.in  configure  configure.ac  dialbox.c  fileutil.c  fileutil.h  geometry.c  geometry.h  lcconfig.h  lchelp.c  lcsdl.c  lcsdl.h  ldsvgui.c  ldsvguts.c  lin-city.h  lintypes.c  main.c  module_buttons.c  module_buttons.h  modules.h  mouse.c  mps.c  pbar.c  pixmap.c  readpng.c  screen.c  simulate.c  splash.c  timer.c
debian/: NEWS  changelog  clean  control  copyright  docs  lincity.desktop  lincity.install  links  menu  rules  sv.po  watch
debian/patches/: avoid-refresh-uninited-701927  clang-ftbfs-757859  coal-reservers-486597  extern-inline-functions-777982  series  set_DEFAULT_LIBDIR  testing  translations  windmills-374901
help/: blacksmith.hlp  button-index.hlp  button-index2.hlp  button-index3.hlp  coalmine.hlp  coalmine2.hlp  commune.hlp  cricket.hlp  export.hlp  farm.hlp  firestation.hlp  health.hlp  industryh.hlp  industryl.hlp  market.hlp  market2.hlp  mill.hlp  monument.hlp  opening.hlp  oremine.hlp  pbar.hlp  port.hlp  pottery.hlp  powerline.hlp  powerline2.hlp  powerscoal.hlp  powerssolar.hlp  recycle.hlp  residential.hlp  school.hlp  substation.hlp  sustain.hlp  tip.hlp  transport.hlp  transport3.hlp  transport4.hlp  university.hlp  windmill.hlp
modules/: CMakeLists.txt  Makefile.in  blacksmith.c  coal_power.c  coalmine.c  commune.c  cricket.c  fire.c  firestation.c  health_centre.c  heavy_industry.c  light_industry.c  mill.c  monument.c  oremine.c  organic_farm.c  parkland.c  port.c  pottery.c  power_line.c  rail.c  recycle.c  residence.c  road.c  rocket_pad.c  school.c  shanty.c  solar_power.c  substation.c  tip.c  track.c  university.c  water.c  windmill.c
opening/: 8x8font.sfd  lc-8x8font-8.bdf
po/: LINGUAS  ca.gmo  ca.po  it.gmo  it.po  lincity.pot  pt_BR.po  sv.po
src/: cliglobs.c  cliglobs.h  common.h  dialbox.c  engine.c  fileutil.h  geometry.c  geometry.h  lchelp.c  lclib.c  lcsdl.c  lcsdl.h  lctypes.h  ldsvgui.c  lin-city.h  lintypes.c  lintypes.h  main.c  market.c  module_buttons.c  module_buttons.h  modules.h  mouse.c  mps.c  mps.h  pbar.c  pbar.h  pixmap.c  pixmap.h  readpng.c  readpng.h  screen.c  screen.h  shrglobs.c  shrglobs.h  splash.c  timer.c
